@@ -1,7 +1,11 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.14
 Date: ????
-  Changes:
+
+  Bugfixes:
+    - Fix GUI sometimes being too wide for the screen when using Compact mode. (Again!)
+    - Fix settings GuI "Add X" button state being wrong when changing preset.
+
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.13
 Date: 2022-12-26
